--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2426,3 +2426,26 @@ tr.group:hover {
 #polar-chart-holder {
   padding-top: 20px;
 }
+
+
+/*--------------------------------------------------------------------------------
+    Footer
+----------------------------------------------------------------------------------*/
+.page-footer.footer-fixed {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.page-footer .container {
+  padding: 0 15px;
+}
+
+#world-map-markers {
+  height: 300px;
+}
+
+#polar-chart-holder {
+  padding-top: 20px;
+}
+
